--- a/docs/project-summary/s905m开发.md
+++ b/docs/project-summary/s905m开发.md
@@ -16,7 +16,58 @@
 2. 了解原生setting的源代码
 3. 熟悉硬件相关的驱动配置
 
-## 一、项目结构
+##  编译项目：
+
+```shell
+# 进入编译环境 -y4 905Y4，
+source compile.sh -y4
+
+# bootloader 编译
+./uboot_build.sh
+
+# Kernel 编译
+./kernel_build.sh
+
+# Android 编译
+make -j20
+
+# 带log 编译
+2>&1 | tee build.log
+
+# 第二次编译前
+make installclean
+```
+
+### 搜索命令：
+
+- get_build_var [build_var] 查找编译时各种变量值；
+- get_abs_build_var [build_var] 获取系统中的编译变量的值
+- cgrep [keyword] 所有 C/C++文件执行搜索操作
+- jgrep [keyword] 所有 Java 文件执行搜索操作
+- ggrep [keyword] 所有 Gradle 文件执行搜索操作
+- **mgrep** [keyword] 所有 Android.mk 文件执行搜索操作
+- mangrep [keyword] 所有AndroidManifest.xml文件执行搜索操作
+- sepgrep [keyword] 所有 sepolicy 文件执行搜索操作
+- resgrep [keyword] 所有本地res/*.xml文件执行搜索操作
+- grep -rn [keyword] 递归寻找，在显示符合样式的那一行之前，标示出该行的列数编号。
+
+### 烧录:
+
+使用SecureCRT，连接串口进行烧录。
+
+![](https://s1.vika.cn/space/2025/01/09/a05fd198a54b4fd8aa75336ad7287ee5)
+
+![](https://s1.vika.cn/space/2025/01/09/2a78f385c1b941cfa01fed62f62082b1)
+
+![](https://s1.vika.cn/space/2025/01/09/356fb5d310f04c949c09a6ef5cbc011c)
+
+* 连接电源后，快速按回车键，输入adnl 进入烧录模式。
+
+### 编译dvb_stack
+
+
+
+## 项目结构
 
 ***代码目录结构***
 
@@ -64,7 +115,8 @@ bootloader/uboot-repo/
 ├── bl32
 ├── bl32_3.8
 ├── bl33
-└── v2019
+  ├── v2019
+  └── v2023
 ├──  board/amlogic/configs 	//各种板宏、环境变量配置
 ├──  board/amlogic/s4_ap222	//S905Y4 公版AP222 板子相关
 ├──  cmd			    //uboot下各种命令代码
@@ -147,13 +199,14 @@ hardware/amlogic/
 
 ```java
 vendor/amlogic/common/
-├── aml_mp_sdk		//tsplayer 接口代码
+├── adla_lib
+├── aml_npu_common
 ├── apps				//Amlogic APK代码
-├── DroidLiveTv
-├── DroidTvSettings
-├── MboxLauncher2
-├── Netflix
-├── OTAUpgrade2
+├── ASPlayer
+├── auto_patch
+├── codec2
+├── dsp
+├── efuse
 ├── pai
 ├── TvInput
 ├── VendorOverlay
@@ -207,35 +260,3 @@ vendor/amlogic/common/
 ├── tv						//TV input service
 └── wifi_bt					//WIFI/BT用到的firmware和编译Makefile
 ```
-
-
-
-## 二、熟悉原生setting代码
-
-打开原生setting，adb命令：
-
-```shell
-adb shell am start com.android.tv.settings/.MainSettings
-```
-
-原生setting通常在源码的`packages\apps\`目录下。tv对应TvSetting。
-
-寻找wifi相关的代码：
-
-网络相关：`com.android.tv.settings.connectivity` 
-
-蓝牙相关：
-
-`com.android.tv.settings.util.bluetooth`
-
-## 三、驱动
-
-所有厂商wifi 驱动代码放在vendor/wifi_driver
-
-S/PDIF接口:
-
-S/PDIF是sony和philips在80年代为一般家用器材所定制出来的一种数字讯号传输接口，基本上是以AES/EBU(也称AES3)专业用数字接口为参考然后做了一些小变动而成的家用版本
-
-SD卡：
-
-AV多媒体音视频系统调试:
