[Add] add pages

--- a/docs/study-notes/english/歌词解析.md
+++ b/docs/study-notes/english/歌词解析.md
@@ -83,3 +83,206 @@ Still one trick up my sleeve
 We're gonna make this one shine
 
 just don't look down,And you'll never fall.
+
+# Tough Love
+
+Ever since I was a  girl，my own mother vowed（发誓） I must find the way to power through a noble brow（额；眉毛；坡顶）.
+
+**Ever since**: 自从
+
+**vowed**: 立誓，誓言
+
+**power through**：坚定地完成某事：以强大的毅力和决心完成某项任务或克服某种困难。
+
+I married once for love then my senses came.
+
+I must marry for the stature of my husband's name.
+
+Onto marriage number two,
+
+I knew what I had to do ，
+
+and  my poor husband fell ill in a year or two.
+
+Solved problem number one now to problem number two.
+
+His doe-eyed little girl with gentle point of view.
+
+Would I ship her off to school?
+
+NO! I told her if she stayed that she'd have to earn her keep and so she became the maid.
+
+She was lazy! She was crazy!
+
+She was talking to the mice!
+
+She was hopelessly naive so she had to pay the price.
+
+I moved her to the attic out of sight and out of mind.
+
+I could have thrown her out but I'm benevolent and kind.
+
+Mother your heart's too big for you!
+
+I knew what I had to do!
+
+After all difficult children will take advantage of your good nature.
+
+So you lock them up!
+
+Throw away the key!
+
+There's one on every family tree!
+
+Ungrateful! Hateful! Vile too!
+
+The things she put you through！
+
+Break their spirit so they obey!
+
+Now they'll do anything you say!
+
+Maybe you'd call it cruel but others would call it love.
+
+Tough Love!
+
+I ask you is it a crime to strive for perfection in all things?
+
+Oh on they're so cute when they're little but them they grow up and just ruin everything.
+
+I never wanted children,life was better on my own.
+
+All the screaming nagging childed me to the bone.
+
+But then one day I came across a flower growing free.
+
+It's magic kept me young so kept it all for me.
+
+But someone dug it up now a baby held the power.
+
+So I borrowed her and locked her up and hid her in a tower.
+
+Years went  by Oh the sacrifice! 
+
+and against my better judgment I fed her once or twice.
+
+Teenagers now I know why wild eat their young.
+
+But that's messy.
+
+Manipulation is easily more fun.
+
+A litter guilt a lot of force of course you have to lie.
+
+remind them that without you they'd shrivel up and die!
+
+They only have themselves to blame!
+
+If you'd been there you'd do the same!
+
+So work them hard until they fall in line.
+
+There's one way and it's only mine.
+
+Children are lazy,Spoiled too!
+
+But we know what to do!
+
+Govern them with a heart of stone!
+
+Lock them up so they're all alone!
+
+Maybe you'd call it cruel but others would call it love.
+
+Tough Love!
+
+Ugh! Her own tower with a water view and she runs away the first chance she gets.
+
+These wretched brats think the world owes them something.
+
+But it doesn't!
+
+Far and wide I rule the kingdom with a heavy hand.
+
+But there was more I had in mind a greater plan.
+
+I never cared to share, So the king would have to fall.
+
+But his child blocked the way to me and Fairest of them all.
+
+She was chubby. she was dumb and grotesquely optimistic.
+
+She needed structure in her life.
+
+She wasn't realistic.
+
+I gave her chores and took away the things that she'd enjoy.
+
+but then I caught her singing songs with birds and then a boy.
+
+Love?! Was I just sit by and wait for her to take my crown? No!
+
+She had sealed her fate!
+
+She had to go and so she did and you know what they say 
+
+"An apple once a day keeps your enemies away"
+
+Don't be fooled by their tender smile!
+
+Give an inch and they'll run a mile!
+
+Our idea of a happy home！
+
+Is one where we live all alone!
+
+Dark! Depressing! Desolate!
+
+New let's all drink to that!
+
+Call us "wicked" and call us "mean"!
+
+"Cruel" and everything in between!
+
+You could say it's unjust!
+
+Turning their dreams to dust!
+
+This is what we call love
+
+Tough Love!
+
+
+
+# World’s Smaller Violin
+
+My grandpa fought in World War II.
+
+He was such a noble dude.
+
+I can't even finish school.
+
+Miss my mom and left too soon.
+
+His dad was a fire man.
+
+Who fought fires so violent.
+
+I think I bored my therapist.
+
+While playing him my violin.
+
+Oh my God! That's so insane.
+
+Oh my God! That's such a shame.
+
+Next to them, my shit don't fell so grand.
+
+But I can't help myself from feeling bad.
+
+I kind of feel like two things can be said.
+
+The world's smallest violin.
+
+Really needs an audience.
+
